--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
       "type" : "git",
       "url" : "https://github.com/sarah11918/astro-codepen-embed"
     },
+    "publishConfig": {
+        "@sarah11918:registry": "https://npm.pkg.github.com"
+      },
     "exports": "./src/index.js",
     "keywords": [
       "astro-component"
